# BrightEyes-Flim

./: .gitignore  CODEX_HOW_SPEED_UP  DFD_FLIM_lib.ipynb  G3BP1_FLISM_APR.ipynb  MANIFEST.in  NOTES  README.md  RELEASING.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
example notebooks/: Alignment Data.ipynb  Birfi_fit.ipynb  Calibrate_h5_file_Workflow.ipynb  Convallaria_lifetime_phasor.ipynb  DFCM_Fit.ipynb  Example FLIM analysis on a biological sample.ipynb  Example IRF calibration.ipynb  LaminaTubolin.ipynb  LaminaTubolin_fit_UNFINISHED.ipynb  LaminaTubolin_phasor.ipynb  Test function fit_data_with_ref_or_irf.ipynb  Test h5 calibration workflow.ipynb  TestGiuse_fit_UNFINISHED.ipynb  TestGiuse_phasor.ipynb  h5 DFD calibration workflow copy.ipynb  h5 DFD calibration workflow.ipynb
example notebooks/FDB/: Convallaria_29_07_2024-Copy1.ipynb  Convallaria_lifetime_example.ipynb  Phasor.ipynb
example notebooks/old/: DFCM_Fit.ipynb  Phasor.ipynb
example notebooks/test/: Test class alignment data.ipynb  Test fit_data_with_ref_or_irf.ipynb
example notebooks/workflow test/: h5 DFD calibration workflow.ipynb
notebooks/: APR_FLISM_Convallaria.ipynb  Convallaria_lifetime_example.ipynb  Example FLIM analysis on a biological sample.ipynb  Example IRF calibration.ipynb  Example_Convallaria_TTM_acquisition.ipynb  Example_brighteyesflim_lib.ipynb  G3BP1_FLISM_APR.ipynb  Lamina_and_Tubulin_DFD.ipynb  Phasor.ipynb  S^ISM.ipynb
src/brighteyes_flim/: __init__.py  alignment.py  channel_skew_estimator.py  flism.py  flism_data.py  graph_tools.py  lib.py  (+2 more)
(+6 files in other folders)
