[metadata]
name = brighteyes-flim
version = 0.0.3
author = Mattia Donato
author_email = mattia.donato@iit.it
url = https://github.com/VicidominiLab/brighteyes-flim
description = A toolbox for analysing FLISM images
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
   	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/VicidominiLab/brighteyes-flim/issues
    Documentation = https://brighteyes-flism.readthedocs.io
    Source Code = https://github.com/VicidominiLab/brighteyes-flim
    User Support = https://github.com/VicidominiLab/brighteyes-flim/issues


[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    matplotlib
    brighteyes-ism>=1.2.1


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

